rutas de imagenes guardar las y verlas

--- a/public/index.html
+++ b/public/index.html
@@ -10,6 +10,9 @@
 </head>
 
 <body>
+
+    <img src="http://localhost:3000/imagen/productos/5ec05616b621be47904f3f3f-768.png?token=eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJ1c3VhcmlvIjp7InJvbGUiOiJBRE1JTi1ST0xFIiwiZXN0YWRvIjp0cnVlLCJnb29nbGUiOmZhbHNlLCJfaWQiOiI1ZWI1OGM1NDdlMjgyZjRiZTAzNjIzMWIiLCJub21icmUiOiJ0ZXN0MTEiLCJlbWFpbCI6InRlc3QxMUBnbWFpbC5jb20iLCJfX3YiOjB9LCJpYXQiOjE1ODk2NjMxODQsImV4cCI6MTU4OTgzNTk4NH0.kc8BjKKXcux46T8yVeMd7wNJk4mXBdo7giiBKR-zJ2o"
+        alt="">
     <div class="g-signin2" data-onsuccess="onSignIn"></div>
     <a href="#" onclick="signOut();">Sign out</a>
     <script>
